deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 2
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:22.0.4
        args: ["start", "--cache-stack=kubernetes"]
        ports:
        - name: http
          containerPort: 8080
        - name: jgroups
          containerPort: 7600
