keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 2
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:22.0.4
        args: ["start", "--cache-stack=kubernetes"]
        ports:
          - name: jgroups
            containerPort: 7600
          - name: https
            containerPort: 8443
          - name: http
            containerPort: 8080
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /health/ready
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 1
